Add thumbnail slider section to home

--- a/index.html
+++ b/index.html
@@ -185,6 +185,31 @@
           <div class="img-wrapper"></div>
         </div>
       </section>
+      <section class="white-section">
+        <h2 class="section-title">Beneficios de ser socio</h2>
+        <p class="section-text">
+          Ser socio de nuestra cooperativa significa acceso exclusivo a productos frescos y sostenibles a precios justos.
+        </p>
+        <div class="thumbnail-slider">
+          <div class="thumbnail">
+            <a href="#"><i class="fa-solid fa-eye"></i></a>
+            <h6>Asesoramiento legal</h6>
+          </div>
+          <div class="thumbnail">
+            <a href="#"><i class="fa-solid fa-eye"></i></a>
+            <h6>Canales de comunicación</h6>
+          </div>
+          <div class="thumbnail">
+            <a href="#"><i class="fa-solid fa-eye"></i></a>
+            <h6>Información sobre actividades</h6>
+          </div>
+          <div class="thumbnail">
+            <a href="#"><i class="fa-solid fa-eye"></i></a>
+            <h6>Descuentos en los productos de la cooperativa</h6>
+          </div>
+        </div>
+        <a href="#" class="secondary-button">Descubre todos los beneficios</a>
+      </section>
     </main>
     <!-- <footer>
       <address>
