add urls to links and fix styles on header logo

--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
           </div>
         </div>
         <div class="logo-container">
-          <img
+          <a href="./index.html">
+            <img
             class="logo"
             src="./images/logo.svg"
             alt="logotipo CaLaMariona"
           />
+          </a>
         </div>
         <div class="hamburger">
           <a href="#" onclick="showMenu(document.getElementById('menu'))"><i class="fa-solid fa-bars"></i></a>
