--- a/socis.html
+++ b/socis.html
@@ -38,11 +38,13 @@
           </div>
         </div>
         <div class="logo-container">
-          <img
+          <a href="./index.html">
+            <img
             class="logo"
             src="./images/logo.svg"
             alt="logotipo CaLaMariona"
           />
+          </a>
         </div>
         <div class="hamburger">
           <a href="#" onclick="showMenu(document.getElementById('menu'))"><i class="fa-solid fa-bars"></i></a>
@@ -73,12 +75,6 @@
           <a href="#" class="primary-button">Únete a nosotros</a>
         </div>
         <div class="shadow-cover"></div>
-        <!-- <img
-          id="imgHeroSocis"
-          src="./images/hero_img_socis_xs.jpg"
-          alt="Ramón Bilbao feliz con su cosecha"
-          class="carousel-item active"
-        /> -->
       </section>
       <section class="white-section">
         <h2 class="section-title">Nuestros socios</h2>
