change socis.html section text

--- a/socis.html
+++ b/socis.html
@@ -79,8 +79,7 @@
       <section class="white-section">
         <h2 class="section-title">Nuestros socios</h2>
         <p class="section-text">
-          Estos son algunos de los socios comprometidos con la cooperativa de
-          productores de alientos del barrio.
+          Más que una cooperativa, somos una comunidad comprometida con alimentos saludables y sostenibles. Únete a nosotros para apoyar a los pequeños productores locales y cuidar del medio ambiente mientras disfrutas de productos de calidad, cultivados y elaborados con pasión y dedicación.
         </p>
         <div class="card-grid">
           <div class="card">
