create files products and signup

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <ul>
           <li><a href="#">Cooperativa</a> <i class="fa-solid fa-chevron-up"></i></li>
           <li><a href="./socis.html">Socis</a></li>
-          <li><a href="#">Productes</a></li>
+          <li><a href="./products.html">Productes</a></li>
           <li><a href="#">Contacte</a></li>
           <li><a href="#">Actualitat</a></li>
         </ul>
@@ -187,7 +187,7 @@
               pequeños agricultores y productores independientes comprometidos
               con la calidad y la comunidad.
             </p>
-            <a href="#" class="primary-button">Descúbrelos</a>
+            <a href="./products.html" class="primary-button">Descúbrelos</a>
           </div>
           <div class="img-wrapper"></div>
         </div>
