--- a/socis.html
+++ b/socis.html
@@ -55,8 +55,8 @@
           <li>
             <a href="#">Cooperativa</a> <i class="fa-solid fa-chevron-up"></i>
           </li>
-          <li><a href="#">Socis</a></li>
-          <li><a href="#">Productes</a></li>
+          <li><a href="./socis.html">Socis</a></li>
+          <li><a href="./products.html">Productes</a></li>
           <li><a href="#">Contacte</a></li>
           <li><a href="#">Actualitat</a></li>
         </ul>
@@ -72,7 +72,7 @@
         <div class="hero-information">
           <h3>Nuestros socios</h3>
           <p>Cada uno de nosotros aporta su granito de arena a este valiente proyecto.</p>
-          <a href="#" class="primary-button">Únete a nosotros</a>
+          <a href="./signup.html" class="primary-button">Únete a nosotros</a>
         </div>
         <div class="shadow-cover"></div>
       </section>
