--- a/signup.html
+++ b/signup.html
@@ -68,9 +68,9 @@
       </div>
     </header>
     <main>
-      <section class="white-section">
+      <section class="white-section principal">
         <h1 class="page-title">¡Bienvenid@!</h1>
-        <p class="section-text">
+        <p class="page-text">
             Es importante que leas atentamente los requisitos para ser socio antes de rellenar el formulario que hay a continuación.
         </p>
       </section>
