Add accesibility elements

--- a/index.html
+++ b/index.html
@@ -32,38 +32,73 @@
       <div class="header-menu-1">
         <div class="direct-access">
           <div>
-            <a href="#"><i class="fa-solid fa-user"></i> Acceso socios</a>
+            <a href="#" title="Enlace de acceso a socios"
+              ><i class="fa-solid fa-user"></i> Acceso socios</a
+            >
           </div>
           <div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i> Cesta</a>
+            <a href="#" title="Enlace a a la cesta de la compra"
+              ><i class="fa-solid fa-cart-shopping"></i> Cesta</a
+            >
           </div>
         </div>
         <div class="logo-container">
-          <a href="./index.html">
+          <a href="./index.html" aria-label="Icono de inicio">
             <img
-            class="logo"
-            src="./images/logo.svg"
-            alt="logotipo CaLaMariona"
-          />
+              class="logo"
+              src="./images/logo.svg"
+              alt="logotipo CaLaMariona"
+            />
           </a>
         </div>
         <div class="hamburger">
-          <a href="#" onclick="showMenu(document.getElementById('menu'))"><i class="fa-solid fa-bars"></i></a>
+          <a href="#" onclick="showMenu(document.getElementById('menu'))"
+            ><i class="fa-solid fa-bars"></i
+          ></a>
         </div>
       </div>
       <nav id="menu" class="header-menu-2">
         <ul>
-          <li><a href="#">Cooperativa</a> <i class="fa-solid fa-chevron-up"></i></li>
-          <li><a href="./socis.html">Socis</a></li>
-          <li><a href="./products.html">Productes</a></li>
-          <li><a href="#">Contacte</a></li>
-          <li><a href="#">Actualitat</a></li>
+          <li>
+            <a
+              href="./index.html"
+              title="Enlace a la página principal de la cooperativa"
+              >Cooperativa</a
+            >
+            <i class="fa-solid fa-chevron-up"></i>
+          </li>
+          <li>
+            <a
+              href="./socis.html"
+              title="Enlace a la página de presentación de los socios"
+              >Socis</a
+            >
+          </li>
+          <li>
+            <a href="./products.html" title="Enlace a la galería de productos"
+              >Productes</a
+            >
+          </li>
+          <li>
+            <a href="#" title="Enlace a la página de contacto">Contacte</a>
+          </li>
+          <li>
+            <a href="#" title="Enlace a las noticas de actualidad"
+              >Actualitat</a
+            >
+          </li>
         </ul>
       </nav>
       <div class="redes">
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#" title="Enlace a la red Twitter" target="_blank"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+        <a href="#" title="Enlace a la red Facebook" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="#" title="Enlace a la red Instagram" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
       </div>
     </header>
     <main>
@@ -73,7 +108,12 @@
             <div class="carousel-slide-information">
               <h3>Ramón Bilbao</h3>
               <p>CaLaMariona me ayudó a conseguir mi sueño.</p>
-              <a href="./socis.html" class="primary-button">Conoce a nuestros socios</a>
+              <a
+                href="./socis.html"
+                class="primary-button"
+                title="Enlace a la página de nuestros socios"
+                >Conoce a nuestros socios</a
+              >
             </div>
             <div class="shadow-cover"></div>
             <img
@@ -90,7 +130,12 @@
                 Alimentos saludables y sostenibles a precios justos. Únete a
                 nosotros.
               </p>
-              <a href="#" class="primary-button">Conoce CaLaMariona</a>
+              <a
+                href="#"
+                class="primary-button"
+                title="Enlace a la página principal de la cooperativa"
+                >Conoce CaLaMariona</a
+              >
             </div>
             <div class="shadow-cover"></div>
             <img
@@ -158,7 +203,9 @@
             />
             <div class="card-info">
               <h4>Oliver Fernández Rodríguez</h4>
-              <p>"Desde que pertenezco a CaLaMariona todo han sido facilidades...</p>
+              <p>
+                "Desde que pertenezco a CaLaMariona todo han sido facilidades...
+              </p>
               <a href="#" class="cta">Leer más</a>
             </div>
           </div>
@@ -174,7 +221,12 @@
             ></span>
           </a>
         </div>
-        <a href="./socis.html" class="secondary-button">Conoce a nuestros socios</a>
+        <a
+          href="./socis.html"
+          class="secondary-button"
+          title="Enlace a la página de presentación de los socios de la cooperativa"
+          >Conoce a nuestros socios</a
+        >
       </section>
       <section class="brown-section">
         <div class="brown-inner-section">
@@ -187,7 +239,12 @@
               pequeños agricultores y productores independientes comprometidos
               con la calidad y la comunidad.
             </p>
-            <a href="./products.html" class="primary-button">Descúbrelos</a>
+            <a
+              href="./products.html"
+              class="primary-button"
+              title="Enlace a la galería de productos de la cooperativa"
+              >Descúbrelos</a
+            >
           </div>
           <div class="img-wrapper"></div>
         </div>
@@ -200,23 +257,36 @@
         </p>
         <div class="thumbnail-slider">
           <div class="thumbnail">
-            <a href="#"><i class="fa-solid fa-eye"></i></a>
+            <a href="#" aria-label="Icono ver más"
+              ><i class="fa-solid fa-eye"></i
+            ></a>
             <h6>Asesoramiento legal</h6>
           </div>
           <div class="thumbnail">
-            <a href="#"><i class="fa-solid fa-eye"></i></a>
+            <a href="#" aria-label="Icono ver más"
+              ><i class="fa-solid fa-eye"></i
+            ></a>
             <h6>Canales de comunicación</h6>
           </div>
           <div class="thumbnail">
-            <a href="#"><i class="fa-solid fa-eye"></i></a>
+            <a href="#" aria-label="Icono ver más"
+              ><i class="fa-solid fa-eye"></i
+            ></a>
             <h6>Información sobre actividades</h6>
           </div>
           <div class="thumbnail">
-            <a href="#"><i class="fa-solid fa-eye"></i></a>
+            <a href="#" aria-label="Icono ver más"
+              ><i class="fa-solid fa-eye"></i
+            ></a>
             <h6>Descuentos en los productos de la cooperativa</h6>
           </div>
         </div>
-        <a href="#" class="secondary-button">Descubre todos los beneficios</a>
+        <a
+          href="#"
+          class="secondary-button"
+          title="Enlace a la página de beneficios de la cooperativa"
+          >Descubre todos los beneficios</a
+        >
       </section>
     </main>
     <footer>
@@ -231,7 +301,13 @@
             </p>
             <ul>
               <li>(+34) 909 909 090</li>
-              <li>contacta@calamariona.net</li>
+              <li>
+                <a
+                  href="mailto:contacta@calamariona.net"
+                  title="Enlace al correo electrónico de la cooperativa"
+                  >contacta@calamariona.net</a
+                >
+              </li>
             </ul>
           </address>
         </div>
@@ -250,9 +326,15 @@
       <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona" />
       <div>
         <div class="footer_redes">
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#" title="Enlace a la red Twitter" target="_blank"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+          <a href="#" title="Enlace a la red Facebook" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a href="#" title="Enlace a la red Instagram" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
         </div>
         <p>Diseñado por CaLaMariona, 2023.</p>
       </div>
