--- a/signup.html
+++ b/signup.html
@@ -31,40 +31,73 @@
       <div class="header-menu-1">
         <div class="direct-access">
           <div>
-            <a href="#"><i class="fa-solid fa-user"></i> Acceso socios</a>
+            <a href="#" title="Enlace de acceso a socios"
+              ><i class="fa-solid fa-user"></i> Acceso socios</a
+            >
           </div>
           <div>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i> Cesta</a>
+            <a href="#" title="Enlace a a la cesta de la compra"
+              ><i class="fa-solid fa-cart-shopping"></i> Cesta</a
+            >
           </div>
         </div>
         <div class="logo-container">
-          <a href="./index.html">
+          <a href="./index.html" aria-label="Icono de inicio">
             <img
-            class="logo"
-            src="./images/logo.svg"
-            alt="logotipo CaLaMariona"
-          />
+              class="logo"
+              src="./images/logo.svg"
+              alt="logotipo CaLaMariona"
+            />
           </a>
         </div>
         <div class="hamburger">
-          <a href="#" onclick="showMenu(document.getElementById('menu'))"><i class="fa-solid fa-bars"></i></a>
+          <a href="#" onclick="showMenu(document.getElementById('menu'))"
+            ><i class="fa-solid fa-bars"></i
+          ></a>
         </div>
       </div>
       <nav id="menu" class="header-menu-2">
         <ul>
           <li>
-            <a href="#">Cooperativa</a> <i class="fa-solid fa-chevron-up"></i>
+            <a
+              href="./index.html"
+              title="Enlace a la página principal de la cooperativa"
+              >Cooperativa</a
+            >
+            <i class="fa-solid fa-chevron-up"></i>
           </li>
-          <li><a href="./socis.html">Socis</a></li>
-          <li><a href="./products.html">Productes</a></li>
-          <li><a href="#">Contacte</a></li>
-          <li><a href="#">Actualitat</a></li>
+          <li>
+            <a
+              href="./socis.html"
+              title="Enlace a la página de presentación de los socios"
+              >Socis</a
+            >
+          </li>
+          <li>
+            <a href="./products.html" title="Enlace a la galería de productos"
+              >Productes</a
+            >
+          </li>
+          <li>
+            <a href="#" title="Enlace a la página de contacto">Contacte</a>
+          </li>
+          <li>
+            <a href="#" title="Enlace a las noticas de actualidad"
+              >Actualitat</a
+            >
+          </li>
         </ul>
       </nav>
-      <div class="redes darker">
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      <div class="redes">
+        <a href="#" title="Enlace a la red Twitter" target="_blank"
+          ><i class="fa-brands fa-twitter"></i
+        ></a>
+        <a href="#" title="Enlace a la red Facebook" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="#" title="Enlace a la red Instagram" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
       </div>
     </header>
     <main>
@@ -87,7 +120,13 @@
             </p>
             <ul>
               <li>(+34) 909 909 090</li>
-              <li>contacta@calamariona.net</li>
+              <li>
+                <a
+                  href="mailto:contacta@calamariona.net"
+                  title="Enlace al correo electrónico de la cooperativa"
+                  >contacta@calamariona.net</a
+                >
+              </li>
             </ul>
           </address>
         </div>
@@ -106,9 +145,15 @@
       <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona" />
       <div>
         <div class="footer_redes">
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#" title="Enlace a la red Twitter" target="_blank"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+          <a href="#" title="Enlace a la red Facebook" target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a href="#" title="Enlace a la red Instagram" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
         </div>
         <p>Diseñado por CaLaMariona, 2023.</p>
       </div>
